--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300;400;500;600;700&display=swap');
-
+@media (min-width: 640px) { body {font-size:1rem;} }
+@media (min-width:960px) { body {font-size:1.2rem;} }
+@media (min-width:1100px) { body {font-size:1.5rem;} }
 :root{
     --mainTextColor-light:#000;
     --secondaryTextColor-light:rgb(51 51 51);
@@ -27,7 +29,6 @@
     line-height: 1.5em;
     box-sizing: border-box;
     color: var(--mainTextColor);
-    
 }
 
 body{
@@ -55,20 +56,18 @@ li{
     padding: 1em;
 }
 
-.section--page{
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
 
 #wrapper--hero{
     display: flex;
     align-items: center;
     gap: 4em;
+    
 }
 
 #bio, a{
     font-weight: 300;
 }
+
 
 #user-name{
     font-size: 48px;
