--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 @media (min-width: 640px) { body {font-size:1rem;} }
 @media (min-width:960px) { body {font-size:1.2rem;} }
 @media (min-width:1100px) { body {font-size:1.5rem;} }
+@viewport{
+    min-width: 1200px;
+    min-height: 1200px;
+}
 :root{
     --mainTextColor-light:#000;
     --secondaryTextColor-light:rgb(51 51 51);
@@ -154,10 +158,14 @@ li{
 
 
 @media(max-width:600px){
+   
 
     .section--page{
         padding-top: 1em;
         padding-bottom: 1em;
+        position: absolute;
+        align-items: initial;
+        width: auto;
     }
 
     #Top-container{
